feat: add out-of-school youth registry
